# gifmeta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SUPPORT.md  run-create-tests.sh  run-info-all.sh  run-visual-preview.sh
.github/workflows/: ci.yml  release.yml
src/: gifmeta_structs.rs  lib.rs  main.rs  parse_csv.rs
src/commands/: get_loop.rs  info.rs  loop_count.rs  mod.rs  modify.rs
src/utils/: extract_frame_as_png.rs  mod.rs  parse_csv.rs  set_frame_delay.rs
tests/: extract_frame.rs  modify_loop.rs  preview.rs
tests/testdata/: README.md
