[package]
name = "gifmeta"
version = "0.2.0"
edition = "2021"
authors = ["Mads Paaskesen <madspaaskesen@gmail.com>"]
description = "A sacred tool for inspecting and editing GIF metadata."
license = "MIT"
repository = "https://github.com/madspaaskesen/gifmeta"
readme = "README.md"
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["gif", "metadata", "cli", "loop", "delay"]

[dependencies]
gif = "0.12.0"
clap = { version = "4.4.0", features = ["derive"] }
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
