[package]
name = "gifmeta"
version = "0.4.1"
edition = "2021"
authors = ["Mads Paaskesen <madspaaskesen@gmail.com>"]
description = "A sacred tool for inspecting and editing GIF metadata from the command line."
license = "MIT"
repository = "https://github.com/madspaaskesen/gifmeta"
homepage = "https://sacred-ai.com/about/gifmeta"
documentation = "https://docs.rs/gifmeta"
readme = "README.md"
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["gif", "metadata", "cli", "loop", "delay"]
exclude = [".DS_Store"]

[dependencies]
gif = "0.12.0"
clap = { version = "4.4.0", features = ["derive"] }
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
image = { version = "0.25.6", features = ["png"] }
base64 = "0.22.1"
